--- a/kaboom/Makefile
+++ b/kaboom/Makefile
@@ -7,7 +7,7 @@
 USE_SDL := 1
 
 # This will likely need to be changed to suit your installation.
-ALE := ../..
+ALE := ..
 
 FLAGS := -I$(ALE)/src -I$(ALE)/src/controllers -I$(ALE)/src/os_dependent -I$(ALE)/src/environment -I$(ALE)/src/external -L$(ALE)
 CXX := g++
